<resources>
    <string name="app_name">W7_P1</string>
    <string name="action_settings">Settings</string>
    <string name="reset">RESET</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>

    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>
    <string name="search_bar">Start searching here</string>
    <string name="search_btn">Search</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
</resources>